tests/snapshots/test_attribute__meta_item_path_leading_colon.snap
---
created: "2019-03-17T19:23:24.188245400Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
Path(
    Path {
        leading_colon: Some(
            Colon2
        ),
        segments: [
            PathSegment {
                ident: Ident(
                    foo
                ),
                arguments: None
            },
            Colon2,
            PathSegment {
                ident: Ident(
                    bar
                ),
                arguments: None
            }
        ]
    }
)
