tests/snapshots/test_attribute__meta_item_word-2.snap
---
created: "2019-04-06T05:46:03.313954162Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
Word(
    Ident(
        foo,
    ),
)
