tests/snapshots/test_attribute__meta_item_word.snap
---
created: "2019-04-06T05:46:03.302739380Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
Word(
    Ident(
        foo,
    ),
)
